--- a/seer.app/mkdocs.yml
+++ b/seer.app/mkdocs.yml
@@ -8,16 +8,15 @@ nav:
       - Componentes: frontend/components-frontend.md
       - Página Home: frontend/home-frontend.md
       - Página Login e Registro: frontend/auth-frontend.md
-      - Página Painél: frontend/dashboard-fronted.md
+      - Página Painel: frontend/pannel-frontend.md
       - Página Relatórios: frontend/report_app_frontend.md
+      - Configurações: frontend/settings-frontend.md
+      - Suporte: frontend/support-frontend.md
+      - Notificações: frontend/notifications-frontend.md
 
   - Back-End:
-      - Configurações: backend/settings.md
-      - API: backend/api.md
-      - Bibliotecas: backend/utils.md
-      - Autenticação: backend/auth-backend.md
       - Login: backend/views/login.md
-      - Integração: backend/views/onboarding.md
+      - Onboarding: backend/views/onboarding.md
       - Painel: backend/views/panel.md
       - Relatórios: backend/views/relatorios.md
       - Notificações: backend/views/notifications.md
@@ -25,15 +24,7 @@ nav:
       - Página Relatórios: backend/report_app_backend.md
 
   - Banco de Dados: 
-      - Esquema e Relações: db/schemas.md
-      - Modelos: db/models.md
       - Página Relatórios: db/report_app_database.md
-
-  - Testes: testing.md
-
-  - Deploy: deployment.md
-
-  - DevOps: devops.md
 
 theme:
   name: material
